// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTableOfRecords column actions multiple is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
      <EuiTableHeaderCell
        align="right"
        key="_actions_h_1"
        scope="col"
      />
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        data-test-subj="tableRow-0"
        isSelected={false}
        key="row_0_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_0_0"
          textOnly={true}
        >
          name0
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_0_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "name": "Actions",
                  "render": [Function],
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 0,
                      "name": "name0",
                    },
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                  ],
                  "totalRecordCount": 2,
                },
              }
            }
            record={
              Object {
                "id": 0,
                "name": "name0",
              }
            }
            recordId={0}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        data-test-subj="tableRow-1"
        isSelected={false}
        key="row_1_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_1_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "name": "Actions",
                  "render": [Function],
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 0,
                      "name": "name0",
                    },
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                  ],
                  "totalRecordCount": 2,
                },
              }
            }
            record={
              Object {
                "id": 1,
                "name": "name1",
              }
            }
            recordId={1}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords column actions single is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
      <EuiTableHeaderCell
        align="right"
        key="_actions_h_1"
        scope="col"
      />
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        data-test-subj="tableRow-0"
        isSelected={false}
        key="row_0_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_0_0"
          textOnly={true}
        >
          name0
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_0_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "description": "edit",
                  "name": "Edit",
                  "onClick": [Function],
                  "type": "button",
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 0,
                      "name": "name0",
                    },
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                  ],
                  "totalRecordCount": 2,
                },
              }
            }
            record={
              Object {
                "id": 0,
                "name": "name0",
              }
            }
            recordId={0}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        data-test-subj="tableRow-1"
        isSelected={false}
        key="row_1_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_1_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "description": "edit",
                  "name": "Edit",
                  "onClick": [Function],
                  "type": "button",
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 0,
                      "name": "name0",
                    },
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                  ],
                  "totalRecordCount": 2,
                },
              }
            }
            record={
              Object {
                "id": 1,
                "name": "name1",
              }
            }
            recordId={1}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords is rendered 1`] = `
<div
  aria-label="aria-label"
  className="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        data-test-subj="tableRow-0"
        isSelected={false}
        key="row_0_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_0_0"
          textOnly={true}
        >
          name0
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        data-test-subj="tableRow-1"
        isSelected={false}
        key="row_1_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords pagination is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        data-test-subj="tableRow-0"
        isSelected={false}
        key="row_0_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_0_0"
          textOnly={true}
        >
          name0
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        data-test-subj="tableRow-1"
        isSelected={false}
        key="row_1_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <PaginationBar
    config={
      Object {
        "columns": Array [
          Object {
            "description": "description",
            "field": "name",
            "name": "Name",
          },
        ],
        "onDataCriteriaChange": [Function],
        "pagination": Object {},
        "recordId": "id",
      }
    }
    model={
      Object {
        "criteria": Object {
          "page": Object {
            "index": 0,
            "size": 2,
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "id": 0,
              "name": "name0",
            },
            Object {
              "id": 1,
              "name": "name1",
            },
          ],
          "totalRecordCount": 4,
        },
      }
    }
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
  />
</div>
`;

exports[`EuiTableOfRecords pagination page 2 is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        data-test-subj="tableRow-0"
        isSelected={false}
        key="row_0_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_0_0"
          textOnly={true}
        >
          name0
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        data-test-subj="tableRow-1"
        isSelected={false}
        key="row_1_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <PaginationBar
    config={
      Object {
        "columns": Array [
          Object {
            "description": "description",
            "field": "name",
            "name": "Name",
          },
        ],
        "onDataCriteriaChange": [Function],
        "pagination": Object {},
        "recordId": "id",
      }
    }
    model={
      Object {
        "criteria": Object {
          "page": Object {
            "index": 1,
            "size": 2,
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "id": 0,
              "name": "name0",
            },
            Object {
              "id": 1,
              "name": "name1",
            },
          ],
          "totalRecordCount": 4,
        },
      }
    }
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
  />
</div>
`;

exports[`EuiTableOfRecords selection is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column_h"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        data-test-subj="tableRow-0"
        isSelected={false}
        key="row_0_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_0"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_0-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_0_0"
          textOnly={true}
        >
          name0
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords sorting is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={true}
        isSorted={true}
        key="_data_h_name_0"
        onSort={[Function]}
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody />
  </EuiTable>
</div>
`;
